
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_8__ TYPE_3__ ;
typedef struct TYPE_7__ TYPE_2__ ;
typedef struct TYPE_6__ TYPE_1__ ;


typedef int uint32 ;
struct TYPE_7__ {int scancode; } ;
typedef TYPE_2__ key_translation ;
typedef int fd_set ;
struct TYPE_6__ {int state; int keycode; } ;
struct TYPE_8__ {TYPE_1__ xkey; } ;
typedef TYPE_3__ XEvent ;
typedef int KeySym ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int RDP_KEYPRESS ;
 scalar_t__ True ;
 int ensure_remote_modifiers (int ,TYPE_2__) ;
 int errno ;
 int error (char*,int ) ;
 int handle_special_keys (int ,int ,int ,scalar_t__) ;
 int ix ;
 int rdp_send_scancode (int ,int ,int ) ;
 int select (int,int *,int *,int *,int *) ;
 int strerror (int ) ;
 int time (int *) ;
 int x_socket ;
 TYPE_2__ xkeymap_translate_key (int ,int ,int ) ;

int
ui_select(int rdp_socket)
{
 int n = (rdp_socket > x_socket) ? rdp_socket + 1 : x_socket + 1;
 fd_set rfds;




        XEvent xevent;
        KeySym keysym;
        uint32 ev_time;
        key_translation tr;
        if (ix-- >= 0)
        { return 1; }
        ev_time = time(((void*)0));
        handle_special_keys(keysym, xevent.xkey.state, ev_time, True);
 tr = xkeymap_translate_key(keysym, xevent.xkey.keycode, xevent.xkey.state);
 ensure_remote_modifiers(ev_time, tr);
 rdp_send_scancode(ev_time, RDP_KEYPRESS, tr.scancode);




 FD_ZERO(&rfds);
 while (True)
 {






  FD_ZERO(&rfds);
  FD_SET(rdp_socket, &rfds);
  FD_SET(x_socket, &rfds);

  switch (select(n, &rfds, ((void*)0), ((void*)0), ((void*)0)))
  {
   case -1:
    error("select: %s\n", strerror(errno));

   case 0:
    continue;
  }

  if (FD_ISSET(rdp_socket, &rfds))
   return 1;
 }
}
